--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
-<html>
+<html lang="en-us">
 
 <head>
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="css/text" href="css/stylesheet.css"/>
 </head>
 
 <body>
+  <nav>
+    <ul class="top-nav">
+      <li><a class="home" href="#home"><img src="css/img/twitterHome.png"></a><li>
+      <li><a class="moments" href="#moments"><img src="css/img/moments.png"></a><li>
+      <li><a class="notifications" href="#notifications"><img src="css/img/notifications.png"></a><li>
+      <li><a class="messages" href="#messages"><img src="css/img/messages.png"></a><li>
+      <li><a class="twitter" href="#twitter"><img src="css/img/twitter.png"></a><li>
+      <li class="top-nav-tweet-btn"><button class="tweet"><span class="text">Tweet</span></button><li>
+      <li class="search"><input type="text" class="form-control-nav" id="search" aria-describedby="search1" placeholder="Search"></li>
+    </ul>
+  </nav>
+
 </body>
 
 
