adding the content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,48 @@
     </ul>
   </nav>
 
+  <div class="news-feed">
+    <div class="home-tweetbox">
+      <input type="text" class="form-control-tweet" id="tweethere" aria-describedby="tweethere1" placeholder="Tweet here">
+    </div>
+  <section>
+        <article>
+            <header>
+                <h1>Tweet #1</h1>
+            </header>
+            <section>
+                This is the first article.  This is <mark>highlighted</mark>.
+            </section>
+        </article>
+        <article>
+            <header>
+                <h1>Tweet #2</h1>
+            </header>
+            <section>
+                This is the second article.  These articles could be blog posts, etc.
+            </section>
+        </article>
+    </section>
+  </div>
+
+    <div class="dashboard">
+    <aside>
+            <section>
+                <h1>who to follow</h1>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </ul>
+            </section>
+            <figure>
+                <img width="85" height="85"
+                    src=""
+                    alt="Michael Brown" />
+                <figcaption>Michael Brown</figcaption>
+            </figure>
+        </aside>
+      </div>
 </body>
 
 
