responsive page/navbar

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
   <nav>
     <ul class="top-nav">
-      <li><a class="home" href="#home"><img src="css/img/twitterHome.png"></a><li>
-      <li><a class="moments" href="#moments"><img src="css/img/moments.png"></a><li>
-      <li><a class="notifications" href="#notifications"><img src="css/img/notifications.png"></a><li>
-      <li><a class="messages" href="#messages"><img src="css/img/messages.png"></a><li>
+      <li><a class="home" href="#home"><img src="css/img/twitterHome.png"><text>Home</text></a><li>
+      <li><a class="moments" href="#moments"><img src="css/img/moments.png"><text>Moment</text></a><li>
+      <li><a class="notifications" href="#notifications"><img height="20" src="css/img/notifications1.png"><text>Notifications</text></a><li>
+      <li><a class="messages" href="#messages"><img src="css/img/messages.png"><text>Messages</text></a><li>
       <li><a class="twitter" href="#twitter"><img src="css/img/twitter.png"></a><li>
       <li class="top-nav-tweet-btn"><button class="tweet"><span class="text">Tweet</span></button><li>
+      <li class="top-nav-profile-btn"><button class="profile"><span class="text"><img src="css/img/profile logo.png"></span></button><li>
       <li class="search"><input type="text" class="form-control-nav" id="search" aria-describedby="search1" placeholder="Search"></li>
     </ul>
   </nav>
